# ChatGPTHelper

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  tauri.conf.json
.github/workflows/: release-desktop.yml
capabilities/: default.json
frontend/: index.html  package-lock.json  package.json  styles.css  tsconfig.json
frontend/scripts/: prepare-dist.mjs  prepare-dist.ps1
frontend/src/: app-context.ts  app.ts  clipboard.ts  dom.ts  manual-input.ts  render.ts  scan.ts  shortcuts.ts  tauri-bridge.ts  tauri.d.ts  types.d.ts  types.ts
src/: main.rs
src/app/: events.rs  mod.rs  state.rs  view.rs
src/app/commands/: account.rs  history.rs  mod.rs  screen.rs  window.rs
src/domain/: catalog.rs  mod.rs  settings.rs
src/infra/: clipboard.rs  mod.rs  paths.rs  screen.rs  screen_selector.rs  shell.rs  storage.rs
src/infra/chatgpt/: catalog.rs  mod.rs  oauth.rs  streaming.rs  usage.rs
