[package]
name = "chatgpt-helper"
version = "1.0.1"
edition = "2024"
description = "Desktop ChatGPT helper for text, OCR, and image questions"
license = "MIT"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
futures-util = "0.3"
log = { version = "0.4", features = ["std"] }
png = "0.18"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = "2"
tauri-plugin-global-shortcut = "2"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "sync", "time"] }
urlencoding = "2.1"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
xcap = "0.0.14"

[build-dependencies]
tauri-build = "2"

[patch.crates-io]
typeid = { path = "vendor/typeid" }

[profile.release]
strip = true
lto = "thin"
